authuntication for pages done

--- a/theblog/templates/articleview.html
+++ b/theblog/templates/articleview.html
@@ -15,7 +15,12 @@
 <br/>
 <br/>
 <a href="{% url 'home'%}" class="btn btn-secondary">back</a>
- <a href="{% url 'update_post' post.pk %}" class="btn btn-secondary">Edit</a>
- <a href="{% url 'delete_post' post.pk %}" class="btn btn-secondary">Delete</a>
+{% if user.is_authenticated %}
+      {% if user.id == post.author.id %}
+          
+          <a href="{% url 'update_post' post.pk %}" class="btn btn-secondary">Edit</a>
+          <a href="{% url 'delete_post' post.pk %}" class="btn btn-secondary">Delete</a>
+      {% endif %}
 
+{% endif %}
 {% endblock %}
