--- a/theblog/templates/addpost.html
+++ b/theblog/templates/addpost.html
@@ -10,17 +10,21 @@
 
 {% block content %}
  
+{% if user.is_authenticated %}
 
-<h1><i>Add Post</i></h1>
-<br/>
-<div class="w-75 p-3">
-<div class="form-group">
-<form method="POST">
-{% csrf_token %}
-{{form.as_p}}
-<button  class="btn btn-secondary">Submit</button>
-<a href="{% url 'home'%}" class="btn btn-secondary">back</a>
-</form>
-</div>
-</div>
+        <h1><i>Add Post</i></h1>
+        <br/>
+        <div class="w-75 p-3">
+        <div class="form-group">
+        <form method="POST">
+        {% csrf_token %}
+        {{form.as_p}}
+        <button  class="btn btn-secondary">Submit</button>
+        <a href="{% url 'home'%}" class="btn btn-secondary">back</a>
+        </form>
+        </div>
+        </div>
+{% else%}
+<h1>You are Not allowed</h1>
+{% endif %}
 {% endblock %}
