--- a/theblog/templates/base.html
+++ b/theblog/templates/base.html
@@ -33,17 +33,19 @@
       <li class="nav-item">
         <a class="nav-link" href="{% url 'addpost'%}">Add Post</a>
       </li>
-
-    {% endif %}
       <li class="nav-item">
+        <a class="nav-link" href="{% url 'logout'%}">Logout</a>
+      </li>
+     {% else %}
+        <li class="nav-item">
         <a class="nav-link" href="{% url 'register'%}">register</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="{% url 'login'%}">Login</a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href="{% url 'logout'%}">Logout</a>
-      </li>
+    {% endif %}
+      
+      
     </ul>
     <form class="form-inline my-2 my-lg-0">
       <input class="form-control mr-sm-2" type="search" placeholder="Search By Title" aria-label="Search">
