--- a/theblog/templates/deletepost.html
+++ b/theblog/templates/deletepost.html
@@ -7,16 +7,26 @@
 {% endblock%}
 {% block content %}
 
-<h1>Delete Post</h1>
-<br/>
-<strong>Delete {{post.title}} ?</strong>
-<div class="w-75 p-3">
-<div class="form-group">
-<form method="POST">
-{% csrf_token %}
-<button  class="btn btn-secondary">Yes</button>
-<a href="{% url 'home'%}" class="btn btn-secondary">No</a>
-</form>
-</div>
-</div>
+{% if user.is_authenticated %}
+
+     {% if user.id == post.author.id %}
+
+               <h1>Delete Post</h1>
+               <br/>
+               <strong>Delete {{post.title}} ?</strong>
+               <div class="w-75 p-3">
+               <div class="form-group">
+               <form method="POST">
+               {% csrf_token %}
+               <button  class="btn btn-secondary">Yes</button>
+               <a href="{% url 'home'%}" class="btn btn-secondary">No</a>
+               </form>
+               </div>
+               </div>
+     {% else%}
+         <h1>You're Not Authorized For delete This Post</h1>
+     {% endif %}
+{% else %}
+<h1>You are Not Allowed</h1>
+{% endif %}
 {% endblock %}
