--- a/theblog/templates/updatepost.html
+++ b/theblog/templates/updatepost.html
@@ -7,18 +7,26 @@
 {% endblock%}
 {% block content %}
 
-<h1>Update Post</h1>
-<br/>
+{% if user.is_authenticated %}
+    {% if user.id == post.author.id %}
+            <h1>Update Post</h1>
+            <br/>
 
-<div class="w-75 p-3">
-<div class="form-group">
-<form method="POST">
-{% csrf_token %}
-{{form.as_p}}
-<button  class="btn btn-secondary">Update</button>
-<a href="{% url 'home'%}" class="btn btn-secondary">back</a>
-</form>
-</div>
-</div>
+            <div class="w-75 p-3">
+            <div class="form-group">
+            <form method="POST">
+            {% csrf_token %}
+            {{form.as_p}}
+            <button  class="btn btn-secondary">Update</button>
+            <a href="{% url 'home'%}" class="btn btn-secondary">back</a>
+            </form>
+            </div>
+            </div>
+    {% else%}
+         <h1>You're Not Authorized For Update This Post</h1>
+   {% endif %}
+{% else %}
+<h1>You are Not Allowed</h1>
+{% endif %}
 
 {% endblock %}
